fix: Hide username overflow

--- a/src/components/userCardSmall/UserCardSmall.scss
+++ b/src/components/userCardSmall/UserCardSmall.scss
@@ -15,7 +15,7 @@
 
     &__name {
         margin: 0.5rem 0;
-        overflow-x:hidden
+        overflow:hidden
     }
 
     &__icon + .PlayerCardSmall__icon{
